# haskell-from-first-principles-old

./: .gitignore  notes.md
01-all-you-need-is-lambda/: exercises.md  notes.md
02-hello-haskell/: comprehension-check.hs  exercises.hs  test.hs
03-strings/: exercises.hs  print3broken.hs
04-basic-datatypes/: exercises.hs
05-types/: exercises.hs  typeKwonDo.hs
06-typeclasses/: typeKwonDo.hs  typecheck.hs
07-more-function-patterns/: chapterExercises.hs  doesntWork.hs
08-recursion/: exercises.hs
09-lists/: chapterExercises.hs  cipher.hs  myZip.hs
10-folding-lists/: chapterExercises.hs  database.hs  scans.hs
11-algebraic-datatypes/: binaryTree.hs  ciphers.hs  huttonsRazor.hs  vehicles.hs
12-signaling-adversity/: chapterExercises.hs  eitherExamples.hs
13-building-projects/: palindrome.hs  person.hs
14-testing/ChapterExercises/: ChapterExercises.cabal
14-testing/ChapterExercises/tests/: QuickCheckTests.hs  WordNumberTests.hs  tests.hs
15-monoid-semigroup/: madlibs.hs  optionalMonoid.hs
15-monoid-semigroup/Optional/: Optional.cabal
15-monoid-semigroup/Optional/src/: Optional.hs
15-monoid-semigroup/Optional/test/: Spec.hs
16-functor/: ChapterExercises.hs  Functor.cabal  FunctorInstances.hs  FunctorProperties.hs  HeavyLifting.hs  Possibly.hs  Sum.hs  chapter-exercises.md  fmap-composition.md
17-applicative/: Applicative.cabal  ChapterExercises.hs  Constant.hs  FixerUpper.hs  Identity.hs  ListApplicative.hs  Lookups.hs  Validations.hs
18-monad/: Bind.hs  ChapterExercises.hs  EitherMonad.hs  Monad.cabal  MonadExamples.hs  Scratch.hs
20-foldable/: FoldableInstances.hs  LibraryFunctions.hs
21-traversable/: ChapterExercises.hs  Traversable.cabal
22-reader/: Reader.cabal  ReaderPractice.hs  ReadingComprehension.hs  Shawty.hs  WarmingUp.hs
(+30 files in other folders)
