name:           Reader
version:        0.1.0.0
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs: .
  build-depends: base,
                 bytestring, hedis,
                 mtl,
                 network-uri,
                 random,
                 scotty,
                 semigroups,
                 text,
                 transformers
  default-language: Haskell2010
