name:                ChapterExercises
version:             0.1.0.0
license-file:        LICENSE
author:              Daniel Rollins
maintainer:          daniel@djrollins.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:  WordNumber
  ghc-options:      -Wall -fwarn-tabs
  build-depends:    base >= 4.7 && < 5, containers, QuickCheck
  hs-source-dirs:   src/
  default-language: Haskell2010

test-suite tests
  ghc-options:      -Wall -fwarn-tabs
  other-modules:    WordNumberTests, QuickCheckTests
  type:             exitcode-stdio-1.0
  main-is:          tests.hs
  hs-source-dirs:   tests
  build-depends:    base >= 4.7 && < 5, ChapterExercises, hspec, QuickCheck
  default-language: Haskell2010
