name:           Optional
version:        0.1.0.0
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs: src
  build-depends: base >=4.7 && <5
  exposed-modules: Optional
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-depends: Optional, base >=4.7 && <5, QuickCheck, hspec
  default-language: Haskell2010
